--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# repo-specific
+aa_fragment_variants.csv
+
+# annoyances
+*.swp
+*.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
